--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
         <!-- Header -->
         <header class="text-center mb-8">
             <div class="lang-pt">
-                <h1 class="text-4xl font-bold text-blue-900 mb-2">Consultoria de Imigração</h1>
+                <h1 class="text-4xl font-bold text-blue-900 mb-2">Conexão com Advogados de Imigração</h1>
                 <p class="text-xl">Seu caminho seguro para uma nova vida</p>
             </div>
             <div class="lang-es hidden">
-                <h1 class="text-4xl font-bold text-blue-900 mb-2">Consultoría de Inmigración</h1>
+                <h1 class="text-4xl font-bold text-blue-900 mb-2">Conexión con abogados de inmigración</h1>
                 <p class="text-xl">Su camino seguro hacia una nueva vida</p>
             </div>
         </header>
@@ -351,10 +351,10 @@
         <!-- Footer -->
         <footer class="mt-12 text-center text-gray-700">
             <div class="lang-pt">
-                <p>&copy; 2023 Consultoria de Imigração. Todos os direitos reservados.</p>
+                <p>&copy; 2023 Conexão com Advogados de Imigração. Todos os direitos reservados.</p>
             </div>
             <div class="lang-es hidden">
-                <p>&copy; 2023 Consultoría de Inmigración. Todos los derechos reservados.</p>
+                <p>&copy; 2023 Conexión con abogados de inmigración. Todos los derechos reservados.</p>
             </div>
         </footer>
     </div>
